# django-allauth-thaid

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  readme-dev.rst  runtests.py
allauth_thaid/: __init__.py  apps.py  provider.py  urls.py  views.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  provider.rst  usage.rst
tests/: settings.py  test_provider.py
